# rioniso

./: CITATION.cff  README.md  pyproject.toml  setup.cfg
notebooks/:  rioniso_notebook.ipynb
rioniso/: __init__.py  __main__.py  functions.py  gui.py  importdata.py  model.py  plotters.py
rionisogui/: __main__.py  gui.py
